# predictive-maintenance-copilot

./: .gitignore  README.md  docker-compose.yml  download_cmapss.py  file_structure.md  pyproject.toml  requirements.txt  verify_setup.py
data/: local_db.json
data/manuals/: safety_procedures.txt  troubleshooting_procedures.txt  turbine_maintenance_guide.txt
src/: __init__.py  config.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/data/: __init__.py  ingestor.py  preprocessor.py
src/ml/: __init__.py  inference.py  models.py  trainer.py
src/rag/: __init__.py  index_builder.py  retriever.py
src/ui/: app.py
src/utils/: __init__.py  bedrock.py  logger.py
