[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-maintenance-copilot"
version = "1.0.0"
description = "Hybrid AI system combining ML models for numeric prediction and LangGraph agents for reasoning"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "llama-index>=0.9.0",
    "llama-index-vector-stores-qdrant>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "qdrant-client>=1.7.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.28.0",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "moto>=4.2.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
